--- a/index.html
+++ b/index.html
@@ -42,16 +42,61 @@
     </div>
   </nav>
   
-  <div class="container-fluid hero-picture p-5">
-  
-  <h1 class="h1-heading">BRISA BØHLE</h1>
-  
-  <div class="head-2">
-    <h2>Front-end developer | Architect
-</h2>
+  <div class="container-fluid hero-picture">
+    <div class="d-block p-5">
+      <h1 class="h1-heading">BRISA BØHLE</h1>
+    </div>
+      <h2>Front-end developer | Architect
+    </h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <p>Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in sagittis nisl faucibus quis
+          urna nibh ut amet diam suscipit pretium massa, sollicitudin in risus in. Sagittis.</p>
+        </div>
+        <div class="col-6"><p>Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in sagittis nisl faucibus quis
+          urna nibh ut amet diam suscipit pretium massa, sollicitudin in risus in. Sagittis.</p></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <img class="img-fluid rounded mx-auto d-block weather-app" src="/src/images/weather-app.PNG" alt="weather-app-pic">
+    </div>
+    <div class="col">
+      <h2>
+        Weather App
+      </h2>
+      <p>
+        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+        Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named
+        Duden flows by
+      </p>
+      <a class="secondary-button" href="https://brave-beaver-99dfde.netlify.app/" title="weather-app">Launch Weather app</a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <h2>
+        Weather App
+      </h2>
+      <p>
+        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+        texts.
+        Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river
+        named
+        Duden flows by
+      </p>
+      <a class="secondary-button" href="https://brave-beaver-99dfde.netlify.app/" title="weather-app">Launch Weather
+        app</a>
+    </div>
+    <div class="col">
+      <img class="img-fluid rounded mx-auto d-block weather-app" src="/src/images/weather-app.PNG" alt="weather-app-pic">
+    </div>
+    
+  </div>
 
-  </div>
-  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
