About me content

--- a/index.html
+++ b/index.html
@@ -43,58 +43,48 @@
   </nav>
   
   <div class="container-fluid hero-picture">
-    <div class="d-block p-5">
-      <h1 class="h1-heading">BRISA BØHLE</h1>
-    </div>
-      <h2>Front-end developer | Architect
-    </h2>
-    <div class="container ">
-      <div class="row">
-        <div class="col-6 mb-5">
-          <p>Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in sagittis nisl faucibus quis
-          urna nibh ut amet diam suscipit pretium massa, sollicitudin in risus in. Sagittis.</p>
-        </div>
-        <div class="col-6 mb-5"><p>Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in sagittis nisl faucibus quis
-          urna nibh ut amet diam suscipit pretium massa, sollicitudin in risus in. Sagittis.</p></div>
-        </div>
+    <h1 class="h1-heading">BRISA BØHLE</h1>
+  </div>
+  <h2>Front-end developer | Architect
+  </h2>
+  <div class="container ">
+    <div class="row justify-content-center">
+      <div class="col-5 text-end mb-5">
+        <p>Self-taught front-end developer</p>
+      </div>
+      <div class="col-4 mb-5"><p>Master of Science in Sustainable Architecture</p></div>
       </div>
     </div>
   </div>
   <div class="container">
-  <div class="row mt-5">
-    <div class="col">
-      <img class="img-fluid img-thumbnail rounded mx-auto d-none d-sm-block picture-app" src="/src/images/weather-app.PNG" alt="weather-app-pic">
+  <div class="row justify-content-center mt-5">
+    <div class="col-5">
+      <img class="img-fluid rounded mx-auto d-none d-sm-block picture-app" src="/src/images/weather-app.PNG" alt="weather-app-pic">
     </div>
-    <div class="col">
+    <div class="col-5">
       <h2>
         Weather App
       </h2>
       <p class="mb-5">
-        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-        Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named
-        Duden flows by
+        This was my second project thru SheCodes. Using Bootstrap, and API to build a weather forecast page.
       </p>
-      <a class="secondary-button project-link" href="https://brave-beaver-99dfde.netlify.app/" title="weather-app">Launch Weather app</a>
+      <a class="secondary-button project-link" href="https://brave-beaver-99dfde.netlify.app/" target="_blank" title="weather-app">Launch Weather app</a>
     </div>
   </div>
   </div>
   <div class="container">
-    <div class="row mt-5">
-      <div class="col">
+    <div class="row justify-content-center mt-5">
+      <div class="col-5">
         <h2>
-          Weather App
+          Recipe site
         </h2>
         <p class="mb-5">
-          Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
-          texts.
-          Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river
-          named
-          Duden flows by
+          This was my first attempt of coding project thru SheCodes. With some basic HTML, CSS and JavaScript.
         </p>
-        <a class="secondary-button project-link" href="https://brave-beaver-99dfde.netlify.app/" title="weather-app">Launch Weather
+        <a class="secondary-button project-link" href="https://www.shecodes.io/workshops/shecodes-online-workshop-60-0/projects/297397" target="_blank" title="weather-app">Launch Recipe site
           app</a>
       </div>
-      <div class="col">
+      <div class="col-5">
         <img class="img-fluid rounded mx-auto d-none d-sm-block picture-app" src="/src/images/paodequeijo.PNG" alt="pao-de-queijo-pic">
       </div>
     </div>
