--- a/architecture.html
+++ b/architecture.html
@@ -5,10 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@1&family=Bellefair&family=Belleza&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/32ba85dd17.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="/src/styles.css">
-  <title>Architecture</title>
+  <title>Homepage</title>
 </head>
 
 <body>
@@ -22,22 +26,86 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/" title="homepage">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/about.html" title="about-me">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="/architecture.html" title="architect-portifolio">Architecture</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <a class="nav-link" href="/contact.html" title="contact_me">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <h1>Brisa Bøhle</h1>
+
+  <div class="container">
+    <div class="row justify-content-center mt-3">
+      <div class="col-5 ">
+        <img class="img-fluid mx-auto d-none d-sm-block picture-proj"
+          src="/src/images/LCA.JPG" alt="lca-project-pic">
+      </div>
+      <div class="col-5">
+        <h2>
+          LCA and adaptability studies
+        </h2>
+        <p>
+          This thesis involves discovering approaches for a project within a zone rather than a site. The goal was to propose an
+          adaptable Attefalls house concept, minimizing the environmental impact that a building can generate. This has been done
+          by testing the adaptable concept in three different sites in Norway and Sweden.
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-5">
+        <h2>
+          Senja
+        </h2>
+        <p>
+          The ZEB Flexibility Lab was a project focused on integrated energy design to create a zero emission building through
+          passive energy design, reduction of thermal losses, and production of renewable energy on the site, while maintaining a
+          comfortable indoor environment. The ultimate challenge of a zero emission building is to develop a balance between a
+          building’s energy expenditure and the energy that can be produced on site. The design goal of this project was to create
+          a laboratory that attains the status of ZEB-COM and provides a comfortable and flexible environment for the researchers
+          and students in the building.
+        </p>
+        
+      </div>
+      <div class="col-5 align-self-center">
+        <img class="img-fluid mx-auto d-none d-sm-block picture-proj" src="/src/images/Senja.PNG"
+          alt="senja-project-pic">
+      </div>
+    </div>
+ 
+    <div class="row justify-content-center mt-3">
+      <div class="col-2 ">
+        <a class="primary-button project-link" href="/src/Portfolio Brisa Bøhle 2019.pdf" target="_blank" title="architecture-portifolio">
+          Full Portfolio</a>
+      </div>
+    </div>
+  </div>
+  <nav class="navbar fixed-bottom navbar-light bg-light mt-5">
+    <div class="container d-flex justify-content-center">
+      <a class="navbar-brand" href="https://www.linkedin.com/in/brisabøhle" target="_blank">
+        <i class="fab fa-linkedin" title="linked-in" width="30" height="24"></i>
+      </a>
+      <a class="navbar-brand" href="mailto:brisa_bohle@gmail.com" target="_blank">
+        <i class="fas fa-envelope" title="email-adress" width="30" height="24"></i>
+      </a>
+      <a class="navbar-brand" href="https://github.com/BrisaBohle/Front-end-Portifolio" target="_blank">
+        <i class="fab fa-github-square" title="github-link" width="30" height="24"></i>
+      </a> <span>Open-source code, by Brisa Bøhle</span>
+
+    </div>
+
+
+  </nav>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
