working with responsiveness

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
   </div>
   <div class="container">
   <div class="row justify-content-center mt-5">
-    <div class="col-5">
-      <img class="img-fluid rounded mx-auto d-none d-sm-block picture-app" src="/src/images/weather-app.PNG" alt="weather-app-pic">
+    <div class="col  d-none d-sm-block">
+      <img class="img-fluid rounded mx-auto picture-app" src="/src/images/weather-app.PNG" alt="weather-app-pic">
     </div>
-    <div class="col-5">
+    <div class="col">
       <h2>
         Weather App
       </h2>
@@ -73,10 +73,9 @@
       <a class="secondary-button project-link" href="https://brave-beaver-99dfde.netlify.app/" target="_blank" title="weather-app">Launch Weather app</a>
     </div>
   </div>
-  </div>
-  <div class="container">
+  
     <div class="row justify-content-center mt-5">
-      <div class="col-5">
+      <div class="col">
         <h2>
           Recipe site
         </h2>
@@ -86,8 +85,8 @@
         <a class="secondary-button project-link" href="https://www.shecodes.io/workshops/shecodes-online-workshop-60-0/projects/297397" target="_blank" title="weather-app">Launch Recipe site
           app</a>
       </div>
-      <div class="col-5">
-        <img class="img-fluid rounded mx-auto d-none d-sm-block picture-app" src="/src/images/paodequeijo.PNG" alt="pao-de-queijo-pic">
+      <div class="col d-none d-sm-block">
+        <img class="img-fluid rounded mx-auto picture-app" src="/src/images/paodequeijo.PNG" alt="pao-de-queijo-pic">
       </div>
     </div>
   </div>
