--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
 
   <div class="container">
     <div class="row justify-content-center mt-3">
-      <div class="col-4 ">
-        <img class="img-fluid mx-auto d-none d-sm-block picture-about" src="/src/images/About me.JPG" alt="about-me-pic">
+      <div class="col-4 d-none d-sm-block ">
+        <img class="img-fluid mx-auto picture-about" src="/src/images/About me.JPG" alt="about-me-pic">
       </div>
       <div class="col-8">
         <h2>
@@ -72,10 +72,11 @@
         
           <h2>Language</h2>
           <div class="row justify-content-center">
-            <div class="col"><img src="/src/images/language/portuguese.svg" alt="portuguese-language"></div>
-            <div class="col"><img src="/src/images/language/english.svg" alt="english-language"></div>
-            <div class="col"><img src="/src/images/language/norwegian.svg" alt="norwegian-language"></div>
-          
+            <div class="d-flex justify-content-center language-img">
+            <div class="col"><img class="img-fluid" src="/src/images/language/portuguese.svg" alt="portuguese-language"></div>
+            <div class="col"><img class="img-fluid" src="/src/images/language/english.svg" alt="english-language"></div>
+            <div class="col"><img class="img-fluid" src="/src/images/language/norwegian.svg" alt="norwegian-language"></div>
+          </div>
         </div>
       </div>
     </div>
