--- a/architecture.html
+++ b/architecture.html
@@ -46,11 +46,11 @@
 
   <div class="container">
     <div class="row justify-content-center mt-3">
-      <div class="col-5 ">
-        <img class="img-fluid mx-auto d-none d-sm-block picture-proj"
+      <div class="col d-none d-sm-block">
+        <img class="img-fluid mx-auto picture-proj"
           src="/src/images/LCA.JPG" alt="lca-project-pic">
       </div>
-      <div class="col-5">
+      <div class="col">
         <h2>
           LCA and adaptability studies
         </h2>
@@ -61,10 +61,9 @@
         </p>
       </div>
     </div>
-  </div>
-  <div class="container">
+  
     <div class="row justify-content-center">
-      <div class="col-5">
+      <div class="col">
         <h2>
           Senja
         </h2>
@@ -78,13 +77,13 @@
         </p>
         
       </div>
-      <div class="col-5 align-self-center">
-        <img class="img-fluid mx-auto d-none d-sm-block picture-proj" src="/src/images/Senja.PNG"
+      <div class="col align-self-center d-none d-sm-block">
+        <img class="img-fluid mx-auto picture-proj" src="/src/images/Senja.PNG"
           alt="senja-project-pic">
       </div>
     </div>
  
-    <div class="row justify-content-center mt-3">
+    <div class="row justify-content-center mt-5">
       <div class="col-2 ">
         <a class="primary-button project-link" href="/src/Portfolio Brisa Bøhle 2019.pdf" target="_blank" title="architecture-portifolio">
           Full Portfolio</a>
