Update responsive for Phones

--- a/architecture.html
+++ b/architecture.html
@@ -45,7 +45,7 @@
   </nav>
 
   <div class="container">
-    <div class="row justify-content-center mt-3">
+    <div class="row align-items-center mt-3">
       <div class="col d-none d-sm-block">
         <img class="img-fluid mx-auto picture-proj"
           src="/src/images/LCA.JPG" alt="lca-project-pic">
@@ -62,7 +62,7 @@
       </div>
     </div>
   
-    <div class="row justify-content-center">
+    <div class="row align-items-center">
       <div class="col">
         <h2>
           Senja
@@ -82,14 +82,14 @@
           alt="senja-project-pic">
       </div>
     </div>
- 
-    <div class="row justify-content-center mt-5">
-      <div class="col-2 ">
-        <a class="primary-button project-link" href="/src/Portfolio Brisa Bøhle 2019.pdf" target="_blank" title="architecture-portifolio">
-          Full Portfolio</a>
-      </div>
-    </div>
-  </div>
+  
+    <div class="text-center mt-5">
+      <a class="primary-button project-link"
+        href="/src/Portfolio Brisa Bøhle 2019.pdf" target="_blank"
+        title="architecture-portifolio">Full Portfolio</a>
+
+          </div>
+ </div>
   <nav class="navbar fixed-bottom navbar-light bg-light mt-5">
     <div class="container d-flex justify-content-center">
       <a class="navbar-brand" href="https://www.linkedin.com/in/brisabøhle" target="_blank">
