--- a/index.html
+++ b/index.html
@@ -46,40 +46,51 @@
   
   <div class="container-fluid hero-picture">
     <h1 class="h1-heading">BRISA BØHLE</h1>
-  </div>
-  <h2>Front-end developer | Architect
-  </h2>
-  <div class="container ">
-    <div class="row justify-content-center">
-      <div class="col-5 text-end mb-5">
-        <p>Self-taught front-end developer</p>
-      </div>
-      <div class="col-4 mb-5"><p>Master of Science in Sustainable Architecture</p></div>
-      </div>
+  
+</div>
+<div class="container">
+  <div class="row align-items-center">
+    <div class="col">
+      <h2>Front-end developer 
+      </h2>
+    </div>
+    <div class="col">
+      <h2>Architect
+      </h2>
     </div>
   </div>
+  <div class="row text-center align-items-center">
+    <div class="col">
+      <p>Self-taught front-end developer </p>
+    </div>
+    <div class="col">
+      <p>Master of Science in Sustainable Architecture</p>
+    </div>
+  </div>
+    
+  </div>
   <div class="container">
-  <div class="row justify-content-center mt-5">
-    <div class="col  d-none d-sm-block">
+  <div class="row align-items-center project-description">
+    <div class="col d-none d-sm-block">
       <img class="img-fluid rounded mx-auto picture-app" src="/src/images/weather-app.PNG" alt="weather-app-pic">
     </div>
     <div class="col">
       <h2>
         Weather App
       </h2>
-      <p class="mb-5">
+      <p>
         This was my second project thru SheCodes. Using Bootstrap, and API to build a weather forecast page.
       </p>
       <a class="secondary-button project-link" href="https://brave-beaver-99dfde.netlify.app/" target="_blank" title="weather-app">Launch Weather app</a>
     </div>
   </div>
   
-    <div class="row justify-content-center mt-5">
+    <div class="row mt-4 align-items-center project-description">
       <div class="col">
         <h2>
           Recipe site
         </h2>
-        <p class="mb-5">
+        <p>
           This was my first attempt of coding project thru SheCodes. With some basic HTML, CSS and JavaScript.
         </p>
         <a class="secondary-button project-link" href="https://www.shecodes.io/workshops/shecodes-online-workshop-60-0/projects/297397" target="_blank" title="weather-app">Launch Recipe site
