--- a/about.html
+++ b/about.html
@@ -46,10 +46,10 @@
 
   <div class="container">
     <div class="row justify-content-center mt-3">
-      <div class="col-4 d-none d-sm-block ">
+      <div class="col d-none d-sm-block ">
         <img class="img-fluid mx-auto picture-about" src="/src/images/About me.JPG" alt="about-me-pic">
       </div>
-      <div class="col-8">
+      <div class="col">
         <h2>
           Brisa Bøhle
         </h2>
