--- a/architecture.html
+++ b/architecture.html
@@ -46,11 +46,11 @@
 
   <div class="container">
     <div class="row align-items-center mt-3">
-      <div class="col d-none d-sm-block">
+      <div class="col">
         <img class="img-fluid mx-auto picture-proj"
           src="/src/images/LCA.JPG" alt="lca-project-pic">
       </div>
-      <div class="col">
+      <div class="col-md-6">
         <h2>
           LCA and adaptability studies
         </h2>
@@ -77,7 +77,7 @@
         </p>
         
       </div>
-      <div class="col align-self-center d-none d-sm-block">
+      <div class="col-md-6">
         <img class="img-fluid mx-auto picture-proj" src="/src/images/Senja.PNG"
           alt="senja-project-pic">
       </div>
