--- a/contact.html
+++ b/contact.html
@@ -46,10 +46,10 @@
 <h1>Contact</h1>
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col d-none d-sm-block">
+    <div class="col-md-6">
       <img class="img-fluid contact-pic"src="/src/images/IMG_3001.JPG" alt="contact-picture">
     </div>
-    <div class="col align-self-center">
+    <div class="col-md-6 align-self-center">
       <ul>
         <li class="contact-list">
           <h3>
