--- a/index.html
+++ b/index.html
@@ -75,19 +75,20 @@
     <div class="col d-none d-sm-block">
       <img class="img-fluid rounded mx-auto picture-app" src="/src/images/weather-app.PNG" alt="weather-app-pic">
     </div>
-    <div class="col">
+    <div class="col text-center">
       <h2>
         Weather App
       </h2>
       <p>
         This was my second project thru SheCodes. Using Bootstrap, and API to build a weather forecast page.
       </p>
+      
       <a class="secondary-button project-link" href="https://brave-beaver-99dfde.netlify.app/" target="_blank" title="weather-app">Launch Weather app</a>
     </div>
   </div>
   
     <div class="row mt-4 align-items-center project-description">
-      <div class="col">
+      <div class="col text-center">
         <h2>
           Recipe site
         </h2>
