--- a/about.html
+++ b/about.html
@@ -63,10 +63,9 @@
           Then I enrolled in a 2-year master’s degree in Sustainable Architecture, at NTNU. After the Master I worked as an
           architect in Trondheim, before the “corona era” struck with all its consequences. And that is where my new story starts.
           
-          I came across an interesting coding program, where I identified my interest and decided to begin my codding journey. I
-          then enrolled in SheCodes program and quick enough began to fell on FLOW and enjoyment while coding.
-          In less than a month I finished the workshops Basic and Plus. Designing this webpage in Responsive workshop. Front-end
-          developer is my new path, and I can’t to see where it will leed me.
+          I came across an interesting coding program called SheCodes, where I identified my interest and decided to enroll and begin my codding journey. Right from the start I began to feel in Flow while coding.
+          In less than a month I finished the workshops Basic and Plus and Designed this webpage in Responsive workshop. Front-end
+          developer is my new path, and I can’t wait to see where it will leed me.
 
         </p>
         
