update nav bar home to logo link

--- a/about.html
+++ b/about.html
@@ -18,63 +18,65 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="/src/images/my-logo.svg" alt="my-logo"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/" title="homepage">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about.html" title="about-me">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/architecture.html" title="architect-portifolio">Architecture</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/contact.html" title="contact_me">Contact</a>
-          </li>
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/" title="homepage"><img src="/src/images/my-logo.svg"
+              alt="my-logo"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about.html" title="about-me">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/architecture.html" title="architect-portifolio">Architecture</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact.html" title="contact_me">Contact</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <div class="container">
-    <div class="row justify-content-center mt-3">
-      <div class="col-md-6 ">
-        <img class="img-fluid mx-auto picture-about" src="/src/images/About me.JPG" alt="about-me-pic">
-      </div>
-      <div class="col-md-6">
-        <h2>
-          Brisa Bøhle
-        </h2>
-        <h2>Front-end developer | Architect
-        </h2>
-        <p>
-          Hello, my name is Brisa and I live in Trondheim. I am an educated architect with a passion for computers, and I urge to
-          transition into working as a designer/developer, full time.
-          </br>
-          I am from Brazil, there I completed a 5-year bachelor’s degree in Architecture and Urbanism, before moving to Norway.
-          Then I enrolled in a 2-year master’s degree in Sustainable Architecture, at NTNU. After the Master I worked as an
-          architect in Trondheim, before the “corona era” struck with all its consequences. And that is where my new story starts.
-          </br>
-          I came across an interesting coding program called SheCodes, where I identified my interest and decided to enroll and begin my codding journey. Right from the start I began to feel in Flow while coding.
-          In less than a month I finished the workshops Basic and Plus and Designed this webpage in Responsive workshop. Front-end
-          developer is my new path, and I can’t wait to see where it will leed me.
+    <div class="wrap-content">
+      <div class="row justify-content-center mt-3">
+        <div class="col-md-6 ">
+          <img class="img-fluid mx-auto picture-about" src="/src/images/About me.JPG" alt="about-me-pic">
+        </div>
+        <div class="col-md-6">
+          <h2>
+            Brisa Bøhle
+          </h2>
+          <h2>Front-end developer | Architect
+          </h2>
+          <p>
+            Hello, my name is Brisa and I live in Trondheim. I am an educated architect with a passion for computers, and I urge to
+            transition into working as a designer/developer, full time.
+            </br>
+            I am from Brazil, there I completed a 5-year bachelor’s degree in Architecture and Urbanism, before moving to Norway.
+            Then I enrolled in a 2-year master’s degree in Sustainable Architecture, at NTNU. After the Master I worked as an
+            architect in Trondheim, before the “corona era” struck with all its consequences. And that is where my new story starts.
+            </br>
+            I came across an interesting coding program called SheCodes, where I identified my interest and decided to enroll and begin my codding journey. Right from the start I began to feel in Flow while coding.
+            In less than a month I finished the workshops Basic and Plus and Designed this webpage in Responsive workshop. Front-end
+            developer is my new path, and I can’t wait to see where it will leed me.
 
-        </p>
-        
-          <h2>Language</h2>
-          <div class="row justify-content-center">
-            <div class="d-flex justify-content-center language-img">
-            <div class="col"><img class="img-fluid" src="/src/images/language/portuguese.svg" alt="portuguese-language"></div>
-            <div class="col"><img class="img-fluid" src="/src/images/language/english.svg" alt="english-language"></div>
-            <div class="col"><img class="img-fluid" src="/src/images/language/norwegian.svg" alt="norwegian-language"></div>
+          </p>
+          
+            <h2>Language</h2>
+            <div class="row justify-content-center">
+              <div class="d-flex justify-content-center language-img">
+              <div class="col"><img class="img-fluid" src="/src/images/language/portuguese.svg" alt="portuguese-language"></div>
+              <div class="col"><img class="img-fluid" src="/src/images/language/english.svg" alt="english-language"></div>
+              <div class="col"><img class="img-fluid" src="/src/images/language/norwegian.svg" alt="norwegian-language"></div>
+            </div>
           </div>
         </div>
       </div>
