--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="/src/images/my-logo.svg" alt="my-logo"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/" title="homepage">Home</a>
+            <a class="nav-link active" aria-current="page" href="/" title="homepage"><img src="/src/images/my-logo.svg" alt="my-logo"></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about.html" title="about-me">About</a>
