update about me text and response

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
   </div>
 </nav>
 
-  <div class="container">
+  <div class="container-xl">
     <div class="wrap-content">
       <div class="row justify-content-center mt-3">
         <div class="col-md-6 ">
@@ -57,29 +57,41 @@
           <h2>Front-end developer | Architect
           </h2>
           <p>
-            Hello, my name is Brisa and I live in Trondheim. I am an educated architect with a passion for computers, and I urge to
-            transition into working as a designer/developer, full time.
+            Hey, 👋 I am Brisa, Master Architect in Sustainable Architecture and self-thought Front-end developer. Born and raised
+            in São José dos Campos in Brazil, about 80km from well know São Paulo. Growing up I always had a great time using my
+            imagination and being creative. Design and TLC is a big passion of mine and had a big influence from a craftswoman, my
+            mom 😊.
             </br>
-            I am from Brazil, there I completed a 5-year bachelor’s degree in Architecture and Urbanism, before moving to Norway.
-            Then I enrolled in a 2-year master’s degree in Sustainable Architecture, at NTNU. After the Master I worked as an
-            architect in Trondheim, before the “corona era” struck with all its consequences. And that is where my new story starts.
+            In 2009 I moved to São Paulo where I completed a 5-year bachelor’s degree in Architecture and Urbanism. During that
+            period I worked as an intern during the daytime and studied in the evenings. Mid graduation, I spend some time with my
+            cousin in Ireland where Improved my English and enjoyed with the twin babies.
+            In my last year of graduation, I meet my husband, while he was on holiday in São Paulo. After my graduation, I moved to
+            Norway in 2014 to be with him, and it was when I saw snow in real life for the first time ☃. In my first years in
+            Norway, I learned about the Norwegian language and our cultural differences.
             </br>
-            I came across an interesting coding program called SheCodes, where I identified my interest and decided to enroll and begin my codding journey. Right from the start I began to feel in Flow while coding.
-            In less than a month I finished the workshops Basic and Plus and Designed this webpage in Responsive workshop. Front-end
-            developer is my new path, and I can’t wait to see where it will leed me.
+            Then in 2016, I enrolled in an international 2-year master’s degree in Sustainable Architecture, at NTNU, I got a chance
+            to work with classmates from various parts of the globe. My first born came in 2017 and he was my companion during the
+            last year of the Masters. In 2019 I worked as an architect in Trondheim and got my second child in 2019. The family is
+            now complete🥰.
+            </br>
+            In 2021 I came across an interesting coding program called SheCodes, where I identified my interest and decided to
+            enroll and begin my codding journey. Right from the start, I began to feel in Flow while coding. In almost a month of
+            learning how to code I managed to create this webpage from scratch 👩‍💻. The next step chapter is to learn React.
+            My biggest wish is to improve people’s lives with my work, architectural or tech, as long as I get to create 😀.
 
           </p>
           
-            <h2>Language</h2>
-            <div class="row justify-content-center">
-              <div class="d-flex justify-content-center language-img">
-              <div class="col"><img class="img-fluid" src="/src/images/language/portuguese.svg" alt="portuguese-language"></div>
-              <div class="col"><img class="img-fluid" src="/src/images/language/english.svg" alt="english-language"></div>
-              <div class="col"><img class="img-fluid" src="/src/images/language/norwegian.svg" alt="norwegian-language"></div>
-            </div>
+            
           </div>
         </div>
       </div>
+<h2>Language</h2>
+<div class="row justify-content-center">
+  <div class="d-flex justify-content-center language-img">
+    <div class="col"><img class="img-fluid" src="/src/images/language/portuguese.svg" alt="portuguese-language"></div>
+    <div class="col"><img class="img-fluid" src="/src/images/language/english.svg" alt="english-language"></div>
+    <div class="col"><img class="img-fluid" src="/src/images/language/norwegian.svg" alt="norwegian-language"></div>
+  </div>
     </div>
   </div>
   
