--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
   <div class="container-xl">
     <div class="wrap-content">
       <div class="row justify-content-center mt-3">
-        <div class="col-md-6 ">
+        <div class="col-md-6 align-self-center">
           <img class="img-fluid mx-auto picture-about" src="/src/images/About me.JPG" alt="about-me-pic">
         </div>
         <div class="col-md-6">
