Spacing between skills content

--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
     </div>
   </div>
   
-  <div class="container">
+  <div class="container mt-5">
     <h2>Skills</h2>
     <div class="row justify-content-center">
       <div class="col"><img src="/src/images/logos/archicad.svg" alt="archicad-logo"></div>
@@ -111,8 +111,8 @@
       <div class="col"><img src="/src/images/logos/vray.svg" alt="vray-logo"></div>
     </div> 
   </div>
-  <div class="container">
-    <div class="row justify-content-center mt-5">
+  <div class="container mt-5">
+    <div class="row justify-content-center">
       <div class="col"><img class="logo-icon" src="/src/images/logo_dev/html.svg" alt="html-logo"></div>
       <div class="col"><img class="logo-icon" src="/src/images/logo_dev/css.svg" alt="css-logo"></div>
       <div class="col"><img class="logo-icon" src="/src/images/logo_dev/java.svg" alt="java-logo"></div>
