Update subheadings and h1

--- a/architecture.html
+++ b/architecture.html
@@ -19,6 +19,7 @@
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,9 +44,11 @@
     </div>
   </div>
 </nav>
-
-  <div class="container">
-    <div class="wrap-content">
+<div class="container">
+  <div class="wrap-content">
+    <hr>
+    <h1>Architecture projects</h1>
+    <hr>
       <div class="row align-items-center mt-3">
         <div class="col">
           <img class="img-fluid mx-auto picture-proj"
