--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
     
   </div>
   <div class="container">
+    <hr>
+    <h4>Code projects</h4>
+    <hr>
+  
   <div class="row align-items-center project-description">
     <div class="col d-none d-sm-block">
       <img class="img-fluid rounded mx-auto picture-app" src="/src/images/weather-app.PNG" alt="weather-app-pic">
@@ -79,7 +83,7 @@
         Weather App
       </h2>
       <p>
-        This was my second project thru SheCodes. Using Bootstrap, and API to build a weather forecast page.
+        This was my second project. Code with Bootstrap, Html, JavaScript, CSS and API Open Weather.
       </p>
       
       <a class="secondary-button project-link" href="https://brave-beaver-99dfde.netlify.app/" target="_blank" title="weather-app">Launch Weather app</a>
@@ -92,7 +96,7 @@
           Recipe site
         </h2>
         <p>
-          This was my first attempt of coding project thru SheCodes. With some basic HTML, CSS and JavaScript.
+          This was my first coding project. With some basic HTML, CSS and JavaScript.
         </p>
         <a class="secondary-button project-link" href="https://www.shecodes.io/workshops/shecodes-online-workshop-60-0/projects/297397" target="_blank" title="weather-app">Launch Recipe site
           app</a>
