--- a/about.html
+++ b/about.html
@@ -43,9 +43,11 @@
     </div>
   </div>
 </nav>
-
-  <div class="container-xl">
-    <div class="wrap-content">
+<div class="wrap-content">
+  <div class="container">
+    <hr>
+    <h1>About me</h1>
+    <hr>    
       <div class="row justify-content-center mt-3">
         <div class="col-md-6 align-self-center">
           <img class="img-fluid mx-auto picture-about" src="/src/images/About me.JPG" alt="about-me-pic">
