update about me text

--- a/about.html
+++ b/about.html
@@ -65,21 +65,20 @@
             mom 😊.
             <br />
             In 2009 I moved to São Paulo where I completed a 5-year bachelor’s degree in Architecture and Urbanism. During that
-            period I worked as an intern during the daytime and studied in the evenings. Mid graduation, I spend some time with my
-            cousin in Ireland where Improved my English and enjoyed with the twin babies.
+            period I worked as an intern during the daytime and studied in the evenings.
+            <br />
             In my last year of graduation, I meet my husband, while he was on holiday in São Paulo. After my graduation, I moved to
-            Norway in 2014 to be with him, and it was when I saw snow in real life for the first time ☃. In my first years in
+            Norway in 2014 to be with him, and it was when I saw snow in real life for the first time ☃. My first years in
             Norway, I learned about the Norwegian language and our cultural differences.
             <br />
             Then in 2016, I enrolled in an international 2-year master’s degree in Sustainable Architecture, at NTNU, I got a chance
-            to work with classmates from various parts of the globe. My first born came in 2017 and he was my companion during the
-            last year of the Masters. In 2019 I worked as an architect in Trondheim and got my second child in 2019. The family is
-            now complete🥰.
+            to work with classmates from various parts of the globe. My first born was my companion during the
+            last year of the Masters. In 2019 I worked as an architect in Trondheim and my second child was born at end of 2019 to complete our family team.
             <br />
-            In 2021 I came across an interesting coding program called SheCodes, where I identified my interest and decided to
+            In 2021 I came across an interesting coding program called SheCodes, where I identified my interests and decided to
             enroll and begin my codding journey. Right from the start, I began to feel in Flow while coding. In almost a month of
-            learning how to code I managed to create this webpage from scratch 👩‍💻. The next step chapter is to learn React.
-            My biggest wish is to improve people’s lives with my work, architectural or tech, as long as I get to create 😀.
+            learning how to code I managed to create this webpage from scratch 👩‍💻. The next step is to learn React.
+            My biggest wish is to improve people’s lives with my work, architectural or tech, as long as I get the chance to create 😀.
 
           </p>
           
