update contact name

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
           <h2>
             Brisa Bøhle
           </h2>
-          <h2>Front-end developer | Architect
+          <h2>Front-end developer entusiast | Architect
           </h2>
           <p>
             Hey, 👋 I am Brisa, Master Architect in Sustainable Architecture and self-thought Front-end developer. Born and raised
