--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
   
   <div class="container">
     <hr />
-    <h1>Contact</h1>
+    <h1>BRISA BØHLE</h1>
     <hr />
     <div class="row justify-content-center">
       <div class="col-md-6">
@@ -55,7 +55,7 @@
       </div>
       <div class="col-md-6 align-self-center">
         <ul>
-          <li class="contact-list">
+            <li class="contact-list">
             <h3>
               Adress
             </h3>
