--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="container">
   <div class="row align-items-center">
     <div class="col">
-      <h2>Front-end developer 
+      <h2>Front-end developer entusiast
       </h2>
     </div>
     <div class="col">
