--- a/about.html
+++ b/about.html
@@ -59,26 +59,35 @@
           <h2>Front-end developer entusiast | Architect
           </h2>
           <p>
-            Hey, 👋 I am Brisa, Master Architect in Sustainable Architecture and self-thought Front-end developer. Born and raised
-            in São José dos Campos in Brazil, about 80km from well know São Paulo. Growing up I always had a great time using my
-            imagination and being creative. Design and TLC is a big passion of mine and had a big influence from a craftswoman, my
-            mom 😊.
+            Hey, 👋 I am Brisa, Master Architect in Sustainable Architecture and Front-end developer, enthusiast (self-thought).
+            Born and raised São Paulo countryside in Brazil. Growing up I always enjoyed using my imagination and creativity in
+            handiwork, repurpose things, in computer changing my blog layout style, painting, among others.
             <br />
-            In 2009 I moved to São Paulo where I completed a 5-year bachelor’s degree in Architecture and Urbanism. During that
-            period I worked as an intern during the daytime and studied in the evenings.
+            In 2009 I moved to São Paulo to study 5-year bachelor’s degree in Architecture and Urbanism. During that period I worked
+            as an intern during the daytime and studied at University in the evenings and projects and homework on the weekends. It
+            was a challenging period. In the beginning, we had to present the project technical drawings by hand, and well if they
+            were not great, we had to start again🤦‍♀️. Making mock-ups was also time-consuming, but it was great fun!🥰 I was so
+            thankful when we could finally use AutoCAD and SketchUp to design our projects.
             <br />
-            In my last year of graduation, I meet my husband, while he was on holiday in São Paulo. After my graduation, I moved to
-            Norway in 2014 to be with him, and it was when I saw snow in real life for the first time ☃. My first years in
-            Norway, I learned about the Norwegian language and our cultural differences.
+            In my last year of graduation, I meet my husband, he is Norwegian, after months apart and plenty of skype, we decided
+            that we wanted to start a life together. I graduated and moved to Norway in 2014 to be with him, and it was when I saw
+            real snow for the first time ☃ in my life, magic! I then began to settle down and learn the Norwegian language and our
+            cultural contrast.
             <br />
-            Then in 2016, I enrolled in an international 2-year master’s degree in Sustainable Architecture, at NTNU, I got a chance
-            to work with classmates from various parts of the globe. My first born was my companion during the
-            last year of the Masters. In 2019 I worked as an architect in Trondheim and my second child was born at end of 2019 to complete our family team.
+            I 2016, I enrolled in an international 2-year master’s degree in Sustainable Architecture, at NTNU, where I got a chance
+            to work with classmates from various parts of the globe, a great teamwork experience. There we learn loots about how to
+            improve architectural design to reduce environmental impact with the help of a variety of project simulator software.
+            Meanwhile, we got pregnant, My firstborn was my companion during the last part of the Masters.
             <br />
-            In 2021 I came across an interesting coding program called SheCodes, where I identified my interests and decided to
-            enroll and begin my codding journey. Right from the start, I began to feel in Flow while coding. In almost a month of
-            learning how to code I managed to create this webpage from scratch 👩‍💻. The next step is to learn React.
-            My biggest wish is to improve people’s lives with my work, architectural or tech, as long as I get the chance to create 😀.
+            My first work experience in 2019 was in an architecture office, where I learn Lumion, ArchiCAD, BIM, and deeper
+            interaction with Norwegian building regulation. By the end of 2019, our second child was born to complete our family🤗.
+            My contract came to an ended and I was home with my newborn for some months till he began kindergarten.
+            <br />
+            Then the pandemic time came and the market was even more competitive. I then came across an interesting coding program
+            called SheCodes, where I identified my interests and decided to enroll and begin my codding journey. Right from the
+            start, I began to feel in Flow while coding. In almost a month of learning how to code I managed to create this webpage
+            from scratch 👩‍💻. The next step is to learn React. My biggest wish is to help to improve people’s lives with my work,
+            architecture, or tech, as long as I get the chance to create 😀.
 
           </p>
           
