updated responsiveness in About page

--- a/about.html
+++ b/about.html
@@ -49,10 +49,10 @@
     <h1>About me</h1>
     <hr />    
       <div class="row justify-content-center mt-3">
-        <div class="col-md-6 align-self-center">
-          <img class="img-fluid mx-auto picture-about" src="/src/images/About me.JPG" alt="about-me-pic">
+        <div class="col-lg-5 align-self-center">
+          <img class="img-fluid mx-auto about-me-pic" src="/src/images/About me.JPG" alt="about-me-pic">
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-7">
           <h2>
             Brisa Bøhle
           </h2>
