--- a/index.html
+++ b/index.html
@@ -73,8 +73,26 @@
     <hr />
     <h4>Code projects</h4>
     <hr />
+  <div class="row mt-4 align-items-center project-description">
   
+    <div class="col text-center">
+      <h2>
+        Weather App React
+      </h2>
+      <p>
+        This was my first React project.
+      </p>
+      <a class="secondary-button project-link"
+        href="https://quirky-borg-52727d.netlify.app/" target="_blank"
+        title="weather-react-app">Launch React Weather app
+      </a>
+    </div>
+    <div class="col d-none d-sm-block">
+      <img class="img-fluid rounded mx-auto picture-app" src="/src/images/weather-react.png" alt="pao-de-queijo-pic">
+    </div>
+  </div>
   <div class="row align-items-center project-description">
+    
     <div class="col d-none d-sm-block">
       <img class="img-fluid rounded mx-auto picture-app" src="/src/images/weather-app.PNG" alt="weather-app-pic">
     </div>
@@ -91,6 +109,7 @@
   </div>
   
     <div class="row mt-4 align-items-center project-description">
+      
       <div class="col text-center">
         <h2>
           Recipe site
