--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </h2>
     </div>
     <div class="col">
-      <h2>Architect
+      <h2><a class="nav-link" href="/architecture.html" title="architect-portifolio">Architect</a>
       </h2>
     </div>
   </div>
@@ -75,6 +75,23 @@
     <hr />
   <div class="row mt-4 align-items-center project-description">
   
+  
+    <div class="col d-none d-sm-block">
+      <img class="img-fluid rounded mx-auto picture-app" src="/src/images/dictionaryreact.PNG" alt="dictionary-app-pic">
+    </div>
+    <div class="col text-center">
+      <h2>
+        Dictionary App
+      </h2>
+      <p>
+        On progress, coded in React.
+      </p>
+  
+      <a class="secondary-button project-link" href="https://naughty-nightingale-49b26e.netlify.app/" target="_blank"
+        title="dictionary-app">Launch Dictionary app</a>
+    </div>
+  </div>
+  <div class="row align-items-center project-description">
     <div class="col text-center">
       <h2>
         Weather App React
