Update About description

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
             <br />
             Then the pandemic time came and the market was even more competitive. I then came across an interesting coding program
             called SheCodes, where I identified my interests and decided to enroll and begin my codding journey. Right from the
-            start, I began to feel in Flow while coding. In almost a month of learning how to code I managed to create this webpage
+            start, I had fun while coding. In almost a month of learning how to code I managed to create this webpage
             from scratch 👩‍💻. I am now learning how to code in React and applying for jobs. My biggest wish is to help to improve people’s lives with my work 😀.
 
           </p>
