React App update

--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
             Then the pandemic time came and the market was even more competitive. I then came across an interesting coding program
             called SheCodes, where I identified my interests and decided to enroll and begin my codding journey. Right from the
             start, I had fun while coding. In almost a month of learning how to code I managed to create this webpage
-            from scratch 👩‍💻. I am now learning how to code in React and applying for jobs. My biggest wish is to help to improve people’s lives with my work 😀.
+            from scratch 👩‍💻. My biggest wish is to help to improve people’s lives with my work 😀.
 
           </p>
           
@@ -128,6 +128,7 @@
       <div class="col"><img class="logo-icon" src="/src/images/logo_dev/api.svg" alt="api-logo"></div>
       <div class="col"><img class="logo-icon" src="/src/images/logo_dev/responsive.svg" alt="responsive-logo"></div>
       <div class="col"><img class="logo-icon" src="/src/images/logo_dev/flexbox.svg" alt="flexbox-logo"></div>
+      <div class="col"><img class="logo-icon" src="/src/images/logo_dev/react.svg" alt="react-logo"></div>
     </div>
   </div>
   
