--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         Dictionary App
       </h2>
       <p>
-        On progress, coded in React.
+        Dictionary coded in React.
       </p>
   
       <a class="secondary-button project-link" href="https://naughty-nightingale-49b26e.netlify.app/" target="_blank"
