--- a/architecture.html
+++ b/architecture.html
@@ -14,7 +14,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="/src/styles.css">
-  <title>My Architecture background - Brisa Bøhle</title>
+  <title>Architect - Brisa Bøhle</title>
 </head>
 
 <body>
@@ -39,6 +39,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/contact.html" title="contact_me">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/codeproj.html" title="code_proj">Front-end</a>
         </li>
       </ul>
     </div>
