--- a/codeproj.html
+++ b/codeproj.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Brisa Bøhle is a front-end developer based in Norway, check out her projects and contact her for job inquiries">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@1&family=Bellefair&family=Belleza&display=swap"
     rel="stylesheet">
@@ -14,7 +14,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="/src/styles.css">
-  <title>Contact me - Brisa Bøhle</title>
+  <title>Front-end developer - Brisa Bøhle</title>
 </head>
 
 <body>
@@ -46,47 +46,84 @@
       </div>
     </div>
   </nav>
-<div class="wrap-content">
-  
-  <div class="container">
+  </div>
+  <div class="container wrap-content">
     <hr />
-    <h1>BRISA BØHLE</h1>
+    <h1>Code projects</h1>
     <hr />
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <img class="img-fluid contact-pic"src="/src/images/IMG_3001.JPG" alt="contact-picture">
+    <div class="row mt-4 align-items-center project-description">
+
+
+      <div class="col d-none d-sm-block">
+        <img class="img-fluid rounded mx-auto picture-app" src="/src/images/dictionaryreact.PNG"
+          alt="dictionary-app-pic">
       </div>
-      <div class="col-md-6 align-self-center">
-        <ul>
-            <li class="contact-list">
-            <h3>
-              Adress
-            </h3>
-            <i class="fas fa-map-marker-alt contact-icon" title="adress-adress"></i>
-            <small>Trondheim, Norway</small>
-          </li>
-          <li class="contact-list">
-            <h3>
-              Email
-            </h3>
-            <i class="fas fa-envelope contact-icon" title="email-adress"></i>
-            <small>brisa_bohle@gmail.com</small>
-          </li>
-          <li class="contact-list">
-            <h3>
-              Linked-In
-            </h3>
-            <i class="fas fa-envelope contact-icon" title="email-adress"></i>
-            <small><a href="https://www.linkedin.com/in/brisabøhle" target="_blank">
-                www.linkedin.com/in/brisabøhle
-              </a></small>
-          </li>
-        </ul>
-      </div>    
+      <div class="col text-center">
+        <h2>
+          Dictionary App
+        </h2>
+        <p>
+          Dictionary coded in React.
+        </p>
+
+        <a class="secondary-button project-link" href="https://naughty-nightingale-49b26e.netlify.app/" target="_blank"
+          title="dictionary-app">Launch Dictionary app</a>
+      </div>
+    </div>
+    <div class="row align-items-center project-description">
+      <div class="col text-center">
+        <h2>
+          Weather App React
+        </h2>
+        <p>
+          This was my first React project.
+        </p>
+        <a class="secondary-button project-link" href="https://quirky-borg-52727d.netlify.app/" target="_blank"
+          title="weather-react-app">Launch React Weather app
+        </a>
+      </div>
+      <div class="col d-none d-sm-block">
+        <img class="img-fluid rounded mx-auto picture-app" src="/src/images/weather-react.png" alt="pao-de-queijo-pic">
+      </div>
+    </div>
+    <div class="row align-items-center project-description">
+
+      <div class="col d-none d-sm-block">
+        <img class="img-fluid rounded mx-auto picture-app" src="/src/images/weather-app.PNG" alt="weather-app-pic">
+      </div>
+      <div class="col text-center">
+        <h2>
+          Weather App
+        </h2>
+        <p>
+          This was my second project. Code with Bootstrap, Html, JavaScript, CSS and API Open Weather.
+        </p>
+
+        <a class="secondary-button project-link" href="https://brave-beaver-99dfde.netlify.app/" target="_blank"
+          title="weather-app">Launch Weather app</a>
+      </div>
+    </div>
+
+    <div class="row mt-4 align-items-center project-description">
+
+      <div class="col text-center">
+        <h2>
+          Recipe site
+        </h2>
+        <p>
+          This was my first coding project. With some basic HTML, CSS and JavaScript.
+        </p>
+        <a class="secondary-button project-link"
+          href="https://www.shecodes.io/workshops/shecodes-online-workshop-60-0/projects/297397" target="_blank"
+          title="weather-app">Launch Recipe site
+          app</a>
+      </div>
+      <div class="col d-none d-sm-block">
+        <img class="img-fluid rounded mx-auto picture-app" src="/src/images/paodequeijo.PNG" alt="pao-de-queijo-pic">
+      </div>
     </div>
   </div>
-</div>
-  <nav class="navbar fixed-bottom navbar-light bg-light">
+  <nav class="navbar fixed-bottom navbar-light bg-light mt-5">
     <div class="container d-flex justify-content-center">
       <a class="navbar-brand" href="https://www.linkedin.com/in/brisabøhle" target="_blank">
         <i class="fab fa-linkedin" title="linked-in" width="30" height="24"></i>
@@ -97,7 +134,10 @@
       <a class="navbar-brand" href="https://github.com/BrisaBohle/Front-end-Portifolio" target="_blank">
         <i class="fab fa-github-square" title="github-link" width="30" height="24"></i>
       </a> <span>Open-source code, by Brisa Bøhle</span>
+
     </div>
+
+
   </nav>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
