--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
         <ul>
             <li class="contact-list">
             <h3>
-              Adress
+              Address
             </h3>
             <i class="fas fa-map-marker-alt contact-icon" title="adress-adress"></i>
             <small>Trondheim, Norway</small>
@@ -70,11 +70,11 @@
               Email
             </h3>
             <i class="fas fa-envelope contact-icon" title="email-adress"></i>
-            <small>brisa_bohle@gmail.com</small>
+            <small>brisa.bohle@gmail.com</small>
           </li>
           <li class="contact-list">
             <h3>
-              Linked-In
+              LinkedIn
             </h3>
             <i class="fas fa-envelope contact-icon" title="email-adress"></i>
             <small><a href="https://www.linkedin.com/in/brisabøhle" target="_blank">
