Update with Master Thesis

--- a/architecture.html
+++ b/architecture.html
@@ -66,6 +66,10 @@
             adaptable Attefalls house concept, minimizing the environmental impact that a building can generate. This has been done
             by testing the adaptable concept in three different sites in Norway and Sweden.
           </p>
+          <div class="text-center mt-5">
+            <a class="primary-button project-link" href="/src/LCA_AND_ADAPTABILITY_STUDIES.pdf" target="_blank"
+              title="architecture-portifolio">Master Thesis</a>
+          </div>
         </div>
       </div>
     
@@ -82,7 +86,10 @@
             a laboratory that attains the status of ZEB-COM and provides a comfortable and flexible environment for the researchers
             and students in the building.
           </p>
-          
+          <div class="text-center mt-5">
+            <a class="primary-button project-link" href="/src/Booklet_Senja.pdf" target="_blank"
+              title="architecture-portifolio">Booklet Senja</a>
+          </div>
         </div>
         <div class="col-md-6">
           <img class="img-fluid mx-auto picture-proj" src="/src/images/Senja.PNG"
